# Game-Jam-25

./: README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/rest/: images.py  rooms.py  sounds.py
backend/src/api/ws/: audio.py  meta.py  video.py
backend/src/models/: emotion.py  gamePhase.py  gameState.py  room.py  round.py  session.py  state.py
backend/src/services/: laugh_detector.py  rooms_service.py
backend/tests/: endpoints.sh
docs/: ENDPOINTS.md
frontend/my-app/: package-lock.json  package.json
frontend/my-app/public/: funny_kahoot_memes.txt
frontend/my-app/src/: App.css  MainMenu.tsx  index.css  main.tsx
frontend/my-app/src/components/: Confetti.tsx  Cursor.tsx  Heart.tsx  Hearts.tsx  IconPanel.tsx  ImagePopup.tsx  PopupWindow.tsx  Ribbon.tsx
frontend/my-app/src/components/Buttons/: ButtonSquare.tsx  ButtonWide.tsx  ButtonWider.tsx
frontend/my-app/src/components/Webcam/: WebcamDisplay.css  WebcamDisplay.tsx
frontend/my-app/src/screens/GameRoom/: GameRoom.css  GameRoom.tsx  LivesDisplay.tsx
frontend/my-app/src/screens/GameRoom/EffectsList/: EffectTabContent.tsx  EffectTabs.css  EffectsList.tsx  MemesList.tsx
frontend/my-app/src/screens/MainMenu/: JoinMenu.tsx  MainMenu.css  MainMenu.tsx
frontend/my-app/src/screens/WaitingRoom/: OwnCamera.tsx  PartnerCamera.tsx  RoomId.tsx  RoomMediaContext.tsx  WaitingRoom.css  WaitingRoom.tsx  WaitingRoomPlayerInfo.tsx
frontend/my-app/src/screens/WebcamTest/: WebcamTest.tsx
frontend/my-app/src/screens/test/: test.tsx
